Add a contact email

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <p>I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
     </main>
 
-    <footer>
-        <a id="footer">
+    <footer style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
+        <a id="footer" style="padding-top: 5px">
             <noscript>Copyright &copy; 2020 Ian Brown.</noscript>
         </a>
         <script>
@@ -62,6 +62,7 @@
             }
             document.getElementById("footer").innerHTML = "Copyright &copy; " + y + " Ian Brown";
         </script>
+        <a href="mailto:info@motivesoft.co.uk"><img src="./email-black.png" height="30px" width="30px"/></a>
     </footer>
 </body>
 </html>
