--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             }
             document.getElementById("footer").innerHTML = "Copyright &copy; " + y + " Ian Brown";
         </script>
-        <a href="mailto:info@motivesoft.co.uk"><img src="./email-black.png" height="30px" width="30px"/></a>
+        <a href="mailto:enquiries@motivesoft.co.uk"><img src="./email-black.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30px" width="30px"/></a>
     </footer>
 </body>
 </html>
