Add hover effect to email. Change icon

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
     </main>
 
-    <footer style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
+    <footer class="button" style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
         <a id="footer" style="padding-top: 5px">
             <noscript>Copyright &copy; 2020 Ian Brown.</noscript>
         </a>
@@ -66,7 +66,7 @@
             }
             document.getElementById("footer").innerHTML = "Copyright &copy; " + y + " Ian Brown";
         </script>
-        <a href="mailto:enquiries@motivesoft.co.uk"><img src="./email-black.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30px" width="30px"/></a>
+        <a href="mailto:enquiries@motivesoft.co.uk"><img src="./email-white.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30px" width="30px"/></a>
     </footer>
 </body>
 </html>
