--- a/index.html
+++ b/index.html
@@ -38,18 +38,21 @@
     </header>
 
     <main>
-        <p>Well here it is...now what? More than 25 years in the making and still too busy on the day job to make more of this sideline</p>
+        <p>Well here it is...now what? More than 25 years in the making and still too busy on the day job to make more of this sideline.</p>
         <h1>Projects</h1>
         <p>I have created and support a couple of websites to support my wife's graphics art and design:</p>
         <ul>
             <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a></li>
-            <li><a href="https://condaluna.com">@condaluna</a></li>
+            <p>Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</p>
+            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna</a></li>
+            <p>A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</p>
         </ul>
-        <p>I maintain our legacy sites on GitHub for historical interest, for example:</p>
+        <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
         <ul>
             <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a></li>
+            <p>A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</p>
         </ul>
-        <p>I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
+        <p style="padding-top: 20px;">I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
     </main>
 
     <footer style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
