--- a/404.html
+++ b/404.html
@@ -38,21 +38,8 @@
     </header>
 
     <main>
-        <p>Well here it is...now what? More than 25 years in the making and still too busy on the day job to make more of this sideline.</p>
-        <h1>Projects</h1>
-        <p>I have created and support a couple of websites to support my wife's graphics art and design:</p>
-        <ul>
-            <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a></li>
-            <p>Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</p>
-            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna</a></li>
-            <p>A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</p>
-        </ul>
-        <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
-        <ul>
-            <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a></li>
-            <p>A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</p>
-        </ul>
-        <p style="padding-top: 20px;">I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
+        <p style="text-align: center;">The page you are looking for does not exist.</p>
+        <p style="text-align: center;">Please go to the <a href="./index.html">Motivesoft</a> home page.</p>
     </main>
 
     <footer style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
