--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <p>A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</p>
         </ul>
         <p style="padding-top: 20px;">I have a small collection of projects on my Motivesoft <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far.</p>
+        <ul>
+            <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a></li>
+            <p>The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</p>
+        </ul>
     </main>
 
     <footer style="display: grid; vertical-align: middle; grid-template-columns: auto 50px;">
