Reference the Visual Studio Marketplace page for Motivesoft

--- a/index.html
+++ b/index.html
@@ -52,10 +52,20 @@
             <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a></li>
             <p>A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</p>
         </ul>
-        <p style="padding-top: 20px;">I have a small collection of projects on <a href="https://github.com/Motivesoft"></a>GitHub</a> that I will work on very slowly and may never take very far.</p>
+        <h1 style="padding-top: 20px;">Pages</h1>
+        <p>I have a small collection of projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
+            Theses are also made available through the following pages.</p>
         <ul>
             <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a></li>
             <p>The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</p>
+        </ul>
+        <ul style="padding-top: 20px;">
+            <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a></li>
+            <p>Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.</p>
+            <ul>
+                <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a></li>
+                <p>Visual Studo Code extension for creating UUID values.</p>
+            </ul>
         </ul>
     </main>
 
