Change condaluna naming

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
             <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a></li>
             <p>Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</p>
-            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna</a></li>
+            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna.com</a></li>
             <p>A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</p>
         </ul>
         <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
