GEN-9 HTML fixes for w3c

--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@
     <link rel="manifest" href="./site.webmanifest">
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" >
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' content='Motivesoft home page'>
 </head>
 
@@ -57,7 +57,7 @@
             }
             document.getElementById("footer").innerHTML = "Copyright &copy; " + y + " Ian Brown";
         </script>
-        <a class="button" href="mailto:enquiries@motivesoft.co.uk"><img src="./email-white.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30px" width="30px"/></a>
+        <a class="button" href="mailto:enquiries@motivesoft.co.uk"><img src="./email-white.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30" width="30"></a>
     </footer>
 </body>
 </html>
