--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="manifest" href="./site.webmanifest">
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" >
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' content='Motivesoft home page'>
 </head>
 
@@ -43,29 +43,29 @@
         <p>I have created and support a couple of websites to support my wife's graphics art and design:</p>
         <ul>
             <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a></li>
-            <p>Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</p>
+            Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.
             <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna.com</a></li>
-            <p>A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</p>
+            A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.
         </ul>
         <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
         <ul>
             <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a></li>
-            <p>A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</p>
+            A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.
         </ul>
         <h1 style="padding-top: 20px;">Pages</h1>
         <p>I have a small collection of projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
             Theses are also made available through the following pages.</p>
         <ul>
             <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a></li>
-            <p>The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</p>
+            The GitHub Pages site for Motivesoft, containing an overview of some of these projects.
         </ul>
         <ul style="padding-top: 20px;">
             <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a></li>
-            <p>Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.</p>
-            <ul>
+            Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.
+            <li style="list-style-type: none; padding-top: 10px;"><ul>
                 <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a></li>
-                <p>Visual Studo Code extension for creating UUID values.</p>
-            </ul>
+                Visual Studo Code extension for creating UUID values.
+            </li></ul>
         </ul>
     </main>
 
@@ -83,7 +83,7 @@
             }
             document.getElementById("footer").innerHTML = "Copyright &copy; " + y + " Ian Brown";
         </script>
-        <a class="button" href="mailto:enquiries@motivesoft.co.uk"><img src="./email-white.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30px" width="30px"/></a>
+        <a class="button" href="mailto:enquiries@motivesoft.co.uk"><img src="./email-white.png" alt="email enquiries@motivesoft.co.uk" title="email enquiries@motivesoft.co.uk" height="30" width="30"></a>
     </footer>
 </body>
 </html>
