--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
         <ul style="padding-top: 20px;">
             <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a></li>
             Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.
-            <li style="list-style-type: none; padding-top: 10px;"><ul>
-                <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a></li>
-                Visual Studo Code extension for creating UUID values.
-            </li></ul>
+            <li style="list-style-type: none; padding-top: 10px;">
+                <ul>
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a></li>
+                    Visual Studo Code extension for creating UUID values.
+                </ul>
+            </li>
         </ul>
     </main>
 
