--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
         <h1>Projects</h1>
         <p>I have created and support a couple of websites to support my wife's graphics art and design:</p>
         <ul>
-            <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a><br/>
+            <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a><br>
             Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</li>
-            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna.com</a><br/>
+            <li style="padding-top: 20px;"><a href="https://condaluna.com">@condaluna.com</a><br>
             A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</li>
         </ul>
         <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
         <ul>
-            <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a><br/>
+            <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a><br>
             A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</li>
         </ul>
         <h1 style="padding-top: 20px;">Pages</h1>
         <p>I have a small collection of projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
             Theses are also made available through the following pages.</p>
         <ul>
-            <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a><br/>
+            <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a><br>
             The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</li>
         </ul>
         <ul style="padding-top: 20px;">
-            <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a><br/>
+            <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a><br>
             Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.</li>
             <li style="list-style-type: none; padding-top: 10px;">
                 <ul>
-                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a><br/>
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a><br>
                     Visual Studo Code extension for creating UUID values.</li>
                 </ul>
             </li>
