Added reference to VSX Registry

--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
                 A play area for moondesigns.</li>
             <li><a href="https://motivesoft.github.io/bovvered.eu">Bovvered?</a></li>
             </ul>
-        <h1 style="padding-top: 20px;">Pages</h1>
+        <p style="padding-top: 20px;">From time to time, I create or publish utilities and plugins and make them available from <a href="#pages">various pages and marketplaces</a>. For example:</p>
+        <ul>
+            <li>UUID Generator - Visual Studo Code extension for creating UUID values, available from:
+                <ul>
+                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">Microsoft Marketplace</a></li>
+                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">Open VSX Registry</a></li>
+                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">GitHub Repository</a></li>
+                </ul>
+            </li>
+        </ul>
+        <h1 style="padding-top: 20px;" id="pages">Pages</h1>
         <p>I have a small collection of projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
             Theses are also made available through the following pages.</p>
         <ul>
@@ -67,12 +77,8 @@
                 The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</li>
             <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a><br>
                 Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.</li>
-            <li style="list-style-type: none; padding-top: 0px;">
-                <ul>
-                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">UUID Generator</a><br>
-                        Visual Studo Code extension for creating UUID values.</li>
-                </ul>
-            </li>
+            <li><a href="https://open-vsx.org/namespace/motivesoft">Open VSX Registry - Motivesoft</a><br>
+                Extensions written and published for open source variants of Visual Studo Code</a>.</li>
         </ul>
     </main>
 
