Fix UUID Generator links

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </ul>
         <p style="padding-top: 20px;">From time to time, I create or publish utilities and plugins and make them available from <a href="#pages">various pages and marketplaces</a>. For example:</p>
         <ul>
-            <li>UUID Generator - Visual Studo Code extension for creating UUID values, available from:
+            <li>UUID Generator - <a href="https://code.visualstudio.com/">Visual Studo Code</a> extension for creating UUID values, available from:
                 <ul>
-                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">Microsoft Marketplace</a></li>
-                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">Open VSX Registry</a></li>
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">Microsoft Marketplace</a></li>
+                    <li><a href="https://open-vsx.org/extension/motivesoft/vscode-uuid-generator">Open VSX Registry</a></li>
                     <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">GitHub Repository</a></li>
                 </ul>
             </li>
