Tweaks and twiddles

--- a/index.html
+++ b/index.html
@@ -40,45 +40,39 @@
     <main>
         <p>Well here it is...now what? More than 25 years in the making and still too busy on the day job to make more of this sideline.</p>
         <h1>Projects</h1>
-        <p>I have created and support a couple of websites to support my wife's graphics art and design:</p>
+        <p>I develop and occasionally publish utilities, apps, plugins, websites and whatever else takes my fancy, for example:</p>
         <ul>
-            <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a><br>
-                Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</li>
-            <li><a href="https://condaluna.com">@condaluna.com</a><br>
-                A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</li>
-        </ul>
-        <p style="padding-top: 20px;">I also maintain our legacy sites on GitHub for historical interest, for example:</p>
-        <ul>
-            <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a><br>
-                A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</li>
-            <li><a href="https://motivesoft.github.io/katebrown.co.uk">katebrown.co.uk</a><br>
-                A personal page.</li>
-            <li><a href="https://motivesoft.github.io/moondesigns.co.uk">moondesigns</a><br>
-                A framework for a web design portfolio.</li>
-            <li><a href="https://motivesoft.github.io/webrabbit.co.uk">Web Rabbit</a><br>
-                A play area for moondesigns.</li>
-            <li><a href="https://motivesoft.github.io/bovvered.eu">Bovvered?</a></li>
-            </ul>
-        <p style="padding-top: 20px;">From time to time, I create or publish utilities and plugins and make them available from <a href="#pages">various pages and marketplaces</a>. For example:</p>
-        <ul>
-            <li>UUID Generator - <a href="https://code.visualstudio.com/">Visual Studo Code</a> extension for creating UUID values, available from:
+            <li>I have written and published several extensions for <a href="https://code.visualstudio.com/">Visual Studo Code</a></li>
                 <ul>
-                    <li><a href="https://marketplace.visualstudio.com/items?itemName=motivesoft.vscode-uuid-generator">Microsoft Marketplace</a></li>
-                    <li><a href="https://open-vsx.org/extension/motivesoft/vscode-uuid-generator">Open VSX Registry</a></li>
-                    <li><a href="https://github.com/Motivesoft/vscode-uuid-generator">GitHub Repository</a></li>
+                    <li><a href="https://marketplace.visualstudio.com/publishers/motivesoft">Motivesoft on the Visual Studio Marketplace</a></li>
+                    <li><a href="https://open-vsx.org/namespace/motivesoft">Motivesoft on the Open VSX Registry</a></li>
                 </ul>
             </li>
-        </ul>
-        <h1 style="padding-top: 20px;" id="pages">Pages</h1>
-        <p>I have a small collection of projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
-            Theses are also made available through the following pages.</p>
-        <ul>
-            <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a><br>
-                The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</li>
-            <li><a href="https://marketplace.visualstudio.com/publishers/Motivesoft">Visual Studio Marketplace - Motivesoft</a><br>
-                Extensions written and published for <a href="https://visualstudio.microsoft.com/vs/">Visual Studio</a> or <a href="https://code.visualstudio.com/">Visual Studo Code</a>.</li>
-            <li><a href="https://open-vsx.org/namespace/motivesoft">Open VSX Registry - Motivesoft</a><br>
-                Extensions written and published for open source variants of Visual Studo Code</a>.</li>
+            <li>I have created and support various of websites to support my wife's graphics art and design:</li>
+                <ul>
+                    <li><a href="https://zendoodlesbycatherine.com">Zen Doodles by Catherine</a><br>
+                        Free downloads of zen doodle, mandala and other designs as PDF and PNG. Print or save the images and colour them in.</li>
+                    <li><a href="https://condaluna.com">@condaluna.com</a><br>
+                        A free collection of stickers, GIF, wallpapers and fonts to download or use in Instagram, Facebook, Twitter stories.</li>
+                </ul>
+            <li>I also maintain our legacy sites using <a href="https://motivesoft.github.io">GitHub Pages</a> for historical interest:</li>
+                <ul>
+                    <li><a href="https://motivesoft.github.io/cyberzoo">Cyberzoo</a><br>
+                        A tribute site for virtual pets containing lots of information about Tamagotchis, Nano Babies etc. original created in the late 90s.</li>
+                    <li><a href="https://motivesoft.github.io/katebrown.co.uk">katebrown.co.uk</a><br>
+                        A personal page.</li>
+                    <li><a href="https://motivesoft.github.io/moondesigns.co.uk">moondesigns</a><br>
+                        A framework for a web design portfolio.</li>
+                    <li><a href="https://motivesoft.github.io/webrabbit.co.uk">Web Rabbit</a><br>
+                        A play area for moondesigns.</li>
+                    <li><a href="https://motivesoft.github.io/bovvered.eu">Bovvered?</a></li>
+                </ul>
+            <li>I have a collection of hobby projects on <a href="https://github.com/Motivesoft">GitHub</a> that I will work on very slowly and may never take very far. 
+                Some of these are occasionally made available through the following:</li>
+                <ul>
+                    <li><a href="https://motivesoft.github.io">Motivesoft GitHub Pages</a><br>
+                    The GitHub Pages site for Motivesoft, containing an overview of some of these projects.</li>
+                </ul>
         </ul>
     </main>
 
