Add reference to the VSCode extension GitHub repos

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <ul>
             <li>I have written and published several extensions for <a href="https://code.visualstudio.com/">Visual Studo Code</a></li>
                 <ul>
+                    <li><a hreg="https://github.com/orgs/Motivesoft/repositories?q=vscode-">GitHub repositories</a></li>
                     <li><a href="https://marketplace.visualstudio.com/publishers/motivesoft">Motivesoft on the Visual Studio Marketplace</a></li>
                     <li><a href="https://open-vsx.org/namespace/motivesoft">Motivesoft on the Open VSX Registry</a></li>
                 </ul>
